Diagram added and deprecated method in Factory replaced